UI tweaks for the singular nature of Page Sequences.

--- a/config/locales/app.en.yml
+++ b/config/locales/app.en.yml
@@ -24,6 +24,10 @@ en:
 #      user:
 #        email_address: We will never share your address with third parties
   activerecord:
+    attributes:
+      page:
+        page_panes: Page Panes
+        page_sequences: Page Sequence
     attribute_help:
       table_pane:
         title: this is not displayed in the runtime
