--- a/config/locales/app.en.yml
+++ b/config/locales/app.en.yml
@@ -42,7 +42,7 @@ en:
       predefined_graph_pane:
         x_ticks: number of ticks on the x axis
         y_ticks: number of ticks on the y axis
-        expression: Right hand side of the equation e.g. "3 * x + 3".
+        expression: Right hand side of the equation e.g. "3 * x + 3" or "pow(x,10) * (4 * atan( log(x) + 3))".
       slope_tool_sequence:
         case_type: |
           Choose one of the following forms for this tool:
